# WinSpeech

./: .gitattributes  CMakeLists.txt  README.md  build.bat
include/WinSpeech/: WinSpeech.hpp
src/: WinSpeech.cpp
tests/: CMakeLists.txt  test_WinSpeech.cpp
